--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.2.8",
     "@tinymce/tinymce-react": "^5.1.1",
+    "aos": "^2.3.4",
     "appwrite": "^14.0.1",
+    "framer-motion": "^11.11.9",
     "html-react-parser": "^5.1.18",
     "ldrs": "^1.0.2",
     "react": "^18.3.1",
@@ -20,9 +23,11 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
